fix(loading): accelerate on mobile

--- a/assets/styles/templates/partials/_navbar.scss
+++ b/assets/styles/templates/partials/_navbar.scss
@@ -45,6 +45,9 @@
     &.is-loading {
         transition: right 5s var(--easing);
         right: 50%;
+        @include touch {
+            right: 80%;
+        }
     }
 
     &.is-over-loading {
